--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_grid.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_grid.scss
@@ -77,6 +77,17 @@
     width: percentage(($columns / $grid-columns));
   }
 }
+@mixin make-md-column-right($columns, $gutter: $grid-gutter-width) {
+  position: relative;
+  min-height: 1px;
+  padding-left:  ($gutter / 2);
+  padding-right: ($gutter / 2);
+
+  @media (min-width: $screen-md-min) {
+    float: right;
+    width: percentage(($columns / $grid-columns));
+  }
+}
 @mixin make-md-column-offset($columns) {
   @media (min-width: $screen-md-min) {
     margin-left: percentage(($columns / $grid-columns));
