--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -26,6 +26,7 @@ header {
 @import "msu-partials/homepage-base";
 @import "msu-partials/homepage-feature-caption";
 @import "msu-partials/homepage-ryor";
+@import "msu-partials/homepage-news";
 
 
 
