--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -4,17 +4,24 @@
         <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
         <p class="feature-text">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
         <div class="news-features">
-             
+             <!-- featured featured news item -->
+            <div class="news-feature__large">
+                <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
+                <div class="news-item-text">
+                    <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
+                    <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor dolor lorem, eget ultricies sapien hendrerit id. Suspendisse fringilla diam congue placerat consectetur.</p>
+                </div>
+            </div><!-- ./ .news-feature-item.featured -->
             <!-- regular featured news items -->
-            <div class="news-feature-items">
-                <div class="news-feature-items-wrap">
-                     <div class="news-feature-item">
+            <div class="news-features__small">
+                <div class="news-features__small-row">
+                     <div class="news-feature">
                          <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
                          <div class="news-item-text">
                              <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
                          </div>        
                      </div>   
-                     <div class="news-feature-item">
+                     <div class="news-feature">
                          <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
                          <div class="news-item-text">
                              <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
@@ -22,14 +29,7 @@
                      </div><!-- ./ .news-feature-item -->
                 </div><!-- ./ .news-feature-items-wrap -->    
             </div><!-- ./ .news-feature-item --> 
-            <!-- featured featured news item -->
-            <div class="news-feature featured">
-                <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
-                <div class="news-item-text">
-                    <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
-                    <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor dolor lorem, eget ultricies sapien hendrerit id. Suspendisse fringilla diam congue placerat consectetur.</p>
-                </div>
-            </div><!-- ./ .news-feature-item.featured -->
+            
         </div><!-- ./ .news-feature-items -->
         <a href="javascript:void(0)" class="btn homepage-btn">read more roadrunner stories</a>
     </div><!-- ./ .homepage-news-outer-col -->
