--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -27,6 +27,8 @@ header {
 @import "msu-partials/homepage-feature-caption";
 @import "msu-partials/homepage-ryor";
 @import "msu-partials/homepage-news";
-
+@import "msu-partials/homepage-at-a-glance";
+@import "msu-partials/homepage-community";
+@import "msu-partials/homepage-events";
 
 
