--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
@@ -23,14 +23,15 @@ $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
-$msu-dark-blue:          #003a6e; //Dark blue
+$msu-red:                #d11242 !default; //MSU brand red
+$msu-dark-blue:          #003a6e !default; //Dark blue 
 
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #fff !default;
+$body-bg:              #fff !default;
 //** Global text color on `<body>`.
 $text-color:            $gray-dark !default;
 
@@ -55,7 +56,7 @@ $font-family-base:        $font-family-serif !default;
 $font-size-base:          16px !default;
 $base-unit:               16 !default;
 $font-size-large:         ceil(($font-size-base * 1.125)) !default; // ~18px
-$font-size-small:         ceil(($font-size-base * 0.875)) !default; // ~14px
+$font-size-small:         ceil(($font-size-base *1)) !default; // ~16px
 $large-unit:              ceil((16 * 1.125)) !default;
 $small-unit:              ceil((16 * 0.875)) !default;
 
