--- a/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
@@ -3,48 +3,56 @@
     @include container-fixed();
 }
 .homepage-feature { 
-    background-color: $gray-base;
+    
     @include make-row();
-    h1, h2, p { color: #fff;  }
+    padding-top: 36px;
+    padding-top: torem(36, $small-unit);
+    padding-bottom: 36px;
+    padding-bottom: torem(36, $small-unit);
+    background-color: $gray-base;
     svg { fill: currentColor; } 
 }
 .homepage-feature-block { 
     @include make-sm-column(12);
 }
 .feature-heading { 
-    font-size: 40px; //55px @ 12px
-    font-size: torem(40, $small-unit); //55px @ 12px
-    line-height: 1.5;
-    margin: 0 0 35px;
-    margin: 0 0 torem(35, $small-unit);
+    font-size: 27.2px; //55px @ 12px
+    font-size: torem(27.2); //55px @ 12px
+    line-height: 1.3;
+    margin: 0 0 16px;
+    margin: 0 0 torem(16);
+    color: #fff;
 }
 .feature-heading-large {
     font-family: $font-family-sans-serif;
-    font-size: 40px;
-    font-size: torem(40, $small-unit);
-    line-height: 1.5;
-    margin: 0 0 25px;
-    margin: 0 0 torem(25, $small-unit);
+    font-size: 32px;
+    font-size: torem(32);
+    line-height: 1.3;
+    margin: 0 0 16px;
+    margin: 0 0 torem(16);
+    color: #fff;
     text-transform: uppercase;
 }
 .feature-heading-sub {
-    font-size: 40px;
-    font-size: torem(40, $small-unit);
-    line-height: 60px;
+    font-size: 20.8px;
+    font-size: torem(20.8);
+    line-height: 1.5;
+    color: #fff;
 }
 .feature-text { 
-    font-size: 30px; //55px @ 12px
-    font-size: torem(30, $small-unit); //55px @ 12px
+    font-size: 24px; //55px @ 12px
+    font-size: torem(24); //55px @ 12px
     font-weight: 400;
-    margin: 0 0 35px;
-    margin: 0 0 torem(35, $small-unit);
+    margin: 0 0 16px;
+    margin: 0 0 torem(16);
+    color: #fff;
 
 }
 .homepage-btn {
     font-family: $font-family-sans-serif;
     font-weight: 900;
-    font-size: toem(25, $small-unit); //33px @ 14px
-    font-size: torem(25, $small-unit); //33px @ 14px
+    font-size: 20.8px; 
+    font-size: torem(20.8); //33px @ 14px
     padding: 10px 30px;
     padding: torem(10) torem(30);
     color: $msu-blue;
@@ -54,13 +62,13 @@
     float: right;
 }
 
-@media (min-width: $screen-lg-min) {
+@media (min-width: $screen-md-min) {
     .homepage-feature {
         h1 { line-height: 48px;  }
     }
     .feature-heading {
-        font-size: 44px;
-        font-size: torem(44, $base-unit);
+        font-size: 40px;
+        font-size: torem(40, $base-unit);
         margin-bottom: toem(30, $base-unit);
         margin-bottom: torem(30, $base-unit);
     }
