--- a/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
@@ -1,24 +1,25 @@
 //Run your own road feature
 #homepage-ryor {
-    margin-top: toem(10);
-    margin-top: torem(10);
-    margin-bottom: toem(10);
-    margin-bottom: torem(10);
+    margin-top: 8px;
+    margin-top: torem(8);
+    margin-bottom: toem(8);
+    margin-bottom: torem(8);
     position: relative;
     .feature-heading { 
+        
         margin: 0 0 toem(10, $small-unit);
         margin: 0 0 torem(10, $small-unit);
     }
     .feature-heading-sub {
-        font-size: toem(36, 14);
-        font-size: toem(36, 14);
+        font-size: 25.6;
+        font-size: torem(25.6);
         font-weight: 400;
         margin: 0 0 toem(10, $small-unit);
         margin: 0 0 torem(10, $small-unit);
     }
     .feature-text { 
-        font-size: toem(30, $small-unit); //55px @ 12px
-        font-size: torem(30, $small-unit); //55px @ 12px
+        font-size: 20.8px; 
+        font-size: torem(20.8);
         font-weight: 700;
         margin: 0 0 toem(35, $small-unit);
         margin: 0 0 torem(35, $small-unit);
@@ -57,8 +58,8 @@
     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 80%,rgba(0,0,0,1) 100%); 
 }
 .ryor-student {
-    padding-top: toem(50, 14);
-    padding-top: torem(50, 14);
+    padding-top: 32px;
+    padding-top: torem(32);
 }
 .ryor-image {
     color: $white;
@@ -70,18 +71,30 @@
 }
 .ryor-student, .ryor-image {
     @include make-xs-column(12);   
-
     z-index: 2;
 }
 
-@media (min-width: $screen-lg-min) {    
+@media (min-width: $screen-md-min) {    
     #homepage-ryor {
+        .feature-heading {
+            font-size: 40px;
+            font-size: toem(40);
+            line-height: 1.5;
+        }
         .feature-heading-sub {
-            font-size: toem(36, $small-unit);
-            font-size: toem(36, $small-unit);
+            font-size: 36px;
+            font-size: toem(36);
+            line-height: 1.3;
             font-weight: 400;
             margin: 0 0 toem(10, $base-unit);
             margin: 0 0 torem(10, $base-unit);
+        }
+        .feature-text { 
+            font-size: toem(30, $small-unit); 
+            font-size: torem(30, $small-unit);
+            margin-bottom: 30px;
+            margin-bottom: torem(30);
+            line-height: 1.2;
         }
         .homepage-btn {
             float: left;
@@ -89,9 +102,11 @@
         }
     }
     .ryor-image {
-        @include make-lg-column(5);
+        @include make-md-column(5);
     }
     .ryor-student {
-        @include make-lg-column(7);
+        @include make-md-column(7);
+        padding-top: 48px;
+        padding-top: torem(48);
     }
 }
