--- a/www-root/includes/homepage-news.html
+++ b/www-root/includes/homepage-news.html
@@ -5,10 +5,12 @@
         <p class="feature-text">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
         <div class="news-features">
              <!-- featured featured news item -->
-            <div class="news-feature__large">
-                <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
-                <div class="news-item-text">
-                    <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
+            <div class="news-feature news-feature__large"> 
+                <div class="news-feature-image">
+                    <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
+                </div>
+                <div class="news-feature-text">
+                    <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                     <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor dolor lorem, eget ultricies sapien hendrerit id. Suspendisse fringilla diam congue placerat consectetur.</p>
                 </div>
             </div><!-- ./ .news-feature-item.featured -->
@@ -16,22 +18,26 @@
             <div class="news-features__small">
                 <div class="news-features__small-row">
                      <div class="news-feature">
-                         <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
-                         <div class="news-item-text">
-                             <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
+                         <div class="news-feature-image">
+                             <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
+                         </div>
+                         <div class="news-feature-text">
+                             <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                          </div>        
                      </div>   
                      <div class="news-feature">
-                         <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
-                         <div class="news-item-text">
-                             <h1 class="feature-heading news-item-heading">Helping girls find their path to follow their dreams.</h1>
+                         <div class="news-feature-image">
+                             <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
+                         </div>
+                         <div class="news-feature-text">
+                             <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                          </div>        
                      </div><!-- ./ .news-feature-item -->
                 </div><!-- ./ .news-feature-items-wrap -->    
             </div><!-- ./ .news-feature-item --> 
-            
+            <a href="javascript:void(0)" class="btn homepage-btn">Read more roadrunner stories</a>
         </div><!-- ./ .news-feature-items -->
-        <a href="javascript:void(0)" class="btn homepage-btn">read more roadrunner stories</a>
+        
     </div><!-- ./ .homepage-news-outer-col -->
 </section>
 <!-- ** .// Homepage news ** -->
