--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -131,6 +131,7 @@ li.dropdown.last {
   line-height: 50px;
   font-weight: 800;
   font-size: 1.4em;
+  padding-bottom: 8px;
 }
 //begin expanding search css
 #content-nav {
@@ -592,10 +593,12 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
 .nav > li > a {
   padding-left: 0px;
+  padding-top: 3px;
 }
 
 .mobile-header {
   cursor: pointer;
+  border-right: 1px solid #337ab7;
 }
 
 @media screen and (max-width: 450px) {
