--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -1,122 +1,32 @@
-// Add your custom style declaration in this file
-@import "ContentTypes/variables";
-@import "ContentTypes/MainHeaderNavigation";
-@import "ContentTypes/footer";
+/**
+    ===========================================
+            Start Bootstrap  v 3.3.7
+    ===========================================
+**/
+@import "../../../lib/bootstrap-sass/assets/stylesheets/bootstrap";
+/** -------  End Bootstrap  v 3.3.7 -------- **/
 
-* {
-	box-sizing: border-box;
+
+/**
+    =================================================
+        MSU Denver 2016 custom style declarations
+    =================================================
+**/
+
+/** SVG fallback for IE 8 **/
+header {
+    background-color: #505050;
+    text-align: center;
+    color: #fff;
 }
-
-html,
-body {
-	height: 100%;
-	background-color: #f9f9f9;
-  	font-size: 12px;
-	color: #333;
-}
-
-ul {
-
-  li{
-    padding-left: 0;
-  }
-}
-h1.hidden {
-    display: none;
-}
-
-hr {
-  // width: 50%;
-  // margin: 3em auto;
-  border: none;
-  border-top: 1px solid #999;
-}
-
-pre,
-code {
-  font-family: 'Roboto Mono', monospace;
-  font-weight: 300;
-  display: block;
-  white-space: pre-wrap;
-  /*max-width: 50em;
-  overflow-x: scroll;*/
-}
-
-.container {
-	max-width: 75em;
-	margin-left: auto;
-	margin-right: auto;
-
-}
-
-
-.container-fluid {
-    padding-right: 0;
-    padding-left: 0;
-}
-.code-example {
-  border-radius: .25em;
-  padding-left: 2em;
-  border: 1px solid rgba(189, 177, 104, .8);
-  background-color: rgba(250, 250, 250, .7);
-}
-
-.example-box {
-	padding: 1em .75em;
-	background-color: rgba(236,236,236, 1);
-	border: 1px solid rgba(220, 198, 224, .9);
-	border-radius: .25em;
-	margin-bottom: 2em;
-}
-
-#congrat-message {
-	text-align: center;
-}
-
-.example-title {
-	font-weight: bold;
-}
-
-.code-text {
-  background-color: rgba(250, 250, 250, .7);
-  border: 1px solid rgba(189, 177, 104, .8);
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-
-
-/* Typography */
-h1, h2 { font-family: 'Raleway', Helvetica, sans-serif; }
-h1 { text-transform: uppercase;}
-
-.feature-heading {
-    margin-top: 0;
-}
-
-
-/* Components */
-header, section, footer {
-    padding: 1.667rem 0;
-}
-header { background-color: #505050; text-align: center; color: #fff; }
-
-
-
-/* Overrides @787px */
-@media (min-width: 50em) {
-  html,
-  body {
-    font-size: 16px;
-  }
-
-  h1 {
-      font-size: 2.500rem;    /* 40px */
-  }
-  .feature-subtext {
-    font-size:  1.875rem;    /* 30px */
-  }
-  header, section, footer {
-      padding: 4.125rem 0; /* 66px */
-  }
-}
+#denver-city-svg { background: blue; color: #fff; }
+#denver-city-svg svg { color: #fff;}
+/**  Homepage Feature Components michael.mason@terminalfour.com **/
+@import "msu-partials/msu-utils";
+@import "msu-partials/homepage-base";
+@import "msu-partials/homepage-feature-caption";
+@import "msu-partials/homepage-ryor";
+@import "msu-partials/homepage-news";
+@import "msu-partials/homepage-at-a-glance";
+@import "msu-partials/homepage-community";
+@import "msu-partials/homepage-events";
